[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://actors/player/player.gd" id="1_z7xkc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c2wsv"]
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1ywhv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_melee_hitbox"]
size = Vector3(1, 1.8, 1)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_z7xkc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_c2wsv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_1ywhv")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="InteractionRayCast" type="RayCast3D" parent="CameraPivot/Camera3D"]
target_position = Vector3(0, 0, -4)
enabled = true
exclude_parent = true

[node name="MeleeHitbox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 1
monitorable = false
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeHitbox"]
shape = SubResource("BoxShape3D_melee_hitbox")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.5)